--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -7,4 +7,9 @@
    margin-left: 0;
    font-size: 12px;
    justify-content: center;
+   width: 15px;
+   height: 15px;
+   display: inline-block;
+   position: relative;
+   right: -26%;
 }
