--- a/src/theme.css
+++ b/src/theme.css
@@ -612,8 +612,9 @@ body{
 }
 .header{
   background-color: rgb(255,229,215);
+  flex-direction: column;
   .header-logo{
-    width: 20%;
+    width: 49%;
     img{
       width: 100%;
     }
@@ -622,12 +623,12 @@ body{
     margin-right: auto;
   }
   .nav-search{
-    margin: 0px 1rem;
+    margin: 1rem;
     display: flex;
     justify-content: center;
     margin-right: auto;
     margin-left: auto;
-    width: 45%;
+    width: 100%;
     height: 42px;
     button{
       border-bottom-left-radius:10px;
